Added last exercise

--- a/Algorithms_INCLASS.ipynb
+++ b/Algorithms_INCLASS.ipynb
@@ -608,11 +608,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 66,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Element found at index:  1\n"
+     ]
+    }
+   ],
    "source": [
-    "# will do after Thursday's lecture due to not knowing what linear searching is and time complexity is yet"
+    "def linearSearch(array, n, x):\n",
+    "    # loop through the list \n",
+    "    for i in range(0, n):\n",
+    "        if (array[i] == x):\n",
+    "            return i\n",
+    "    return -1\n",
+    "\n",
+    "\n",
+    "array = [2, 4, 0, 1, 9]\n",
+    "x = 4\n",
+    "n = len(array)\n",
+    "result = linearSearch(array, n, x)\n",
+    "\n",
+    "if (result == -1):\n",
+    "    print(\"Element not found\")\n",
+    "else:\n",
+    "    print(\"Element found at index: \", result)\n",
+    "\n",
+    "# time complexity would be O(n) for linear"
    ]
   }
  ],
