fixed some of exercise 3 code

--- a/Algorithms_INCLASS.ipynb
+++ b/Algorithms_INCLASS.ipynb
@@ -608,14 +608,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Element found at index:  1\n"
+      "Element found at index: 1\n"
      ]
     }
    ],
@@ -636,7 +636,7 @@
     "if (result == -1):\n",
     "    print(\"Element not found\")\n",
     "else:\n",
-    "    print(\"Element found at index: \", result)\n",
+    "    print(f\"Element found at index: {result}\")\n",
     "\n",
     "# time complexity would be O(n) for linear"
    ]
