--- a/Algorithms_INCLASS.ipynb
+++ b/Algorithms_INCLASS.ipynb
@@ -638,7 +638,7 @@
     "else:\n",
     "    print(f\"Element found at index: {result}\")\n",
     "\n",
-    "# time complexity would be O(n) for linear"
+    "# time complexity would be O(n) for Linear Time"
    ]
   }
  ],
